completed contact us page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <div class="container">
         <header>
+            <a href="index.html">
                 <img src="img/DROOM.png" alt="Droom Logo" class="logo">
+            </a>    
 
                 <nav>
                     <a href="#" class="hide-desktop">
@@ -24,7 +26,7 @@
                     <ul class="show-desktop-nav hide-mobile" id="nav">
                         <li id="exit" class="exit-btn hide-desktop"><img src="img/exit.svg" alt="exit menu"></li>
                         <li><a class="member" href="#">Member Login</a></li>
-                        <li><a class="signal" href="#">Contact Us</a></li>
+                        <li><a class="signal" href="contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
         </header>
