--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 <li class="iphone">
                     <div>
                             <h2>Swipe Your Way To <br>Your Next Career</h2>
-                            <p>Lorem ipsum dolor sit amet, cum pretium erat justo libero diam facilisi, nullam enim quam, sed nostra auctor vitae imperdiet.</p>
+                            <p>On DROOM, you're able to look through jobs just like Tinder! Swipe right if you LOVE the job, swipe left if you don't. It's that simple!</p>
                     </div>
                         <img src="img/iphone.png" alt="iOS Plant Profile">
                 </li>
                 <li class="android">
                     <div>
                             <h2>Top Rated Employers<br>a Fingertip Away</h2>
-                            <p>Lorem ipsum dolor sit amet, cum pretium erat justo libero diam facilisi, nullam enim quam, sed nostra auctor vitae imperdiet.</p>
+                            <p>DROOM has job opportunities from top tier companies. To connect with the new generation of workforce, they know they are going to be on DROOM. Join today and find young, hungry talent looking to make an impact immediately.</p>
                     </div>
                             <img src="img/Android.png" alt="Android Plant Profile">
                     </li>
@@ -62,21 +62,21 @@
             <div class="container">
                 <div class="great-app">
                         <h2>Droom is a great app</h2>
-                        <p class="show-desktop hide-mobile">Lorem ipsum dolor sit amet, cum pretium erat justo libero diam facilisi, nullam enim quam, sed nostra auctor vitae imperdiet.</p>
+                        <p class="show-desktop hide-mobile">Don't take our word for it, check out what these top companies have to say.</p>
                 </div>
                 <ul class="show-desktop hide-mobile">
                     <li>
                         <figure>
                             <div class="circle"></div>
-                            <h3>Lorem ipsum dolor sit amet.</h3>
-                            <p>Lorem ipsum dolor sit amet, cum pretiuuctor vitae.</p>
+                            <h3>Hiring Manager - AMAZON</h3>
+                            <p>I found my latest software dev using DROOM. I highly recommend it.</p>
                         </figure>
                     </li>
                     <li>
                         <figure>
                             <div class="circle"></div>
-                            <h3>Lorem ipsum dolor sit amet.</h3>
-                            <p>Lorem ipsum dolor sit amet, cum pretiuuctor vitae.</p>
+                            <h3>Engineering Manager - FACEBOOK</h3>
+                            <p>Our new core of engineers all came from DROOM. Thanks!</p>
                         </figure>
                     </li>
                 </ul>
