--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <ul class="show-desktop-nav hide-mobile" id="nav">
                         <li id="exit" class="exit-btn hide-desktop"><img src="img/exit.svg" alt="exit menu"></li>
-                        <li><a class="member" href="#">Member Login</a></li>
+                        <li><a class="member" href="https://droombwpt.netlify.com/login">Member Login</a></li>
                         <li><a class="signal" href="contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
@@ -80,7 +80,7 @@
                         </figure>
                     </li>
                 </ul>
-                <a href="#" class="cta">Sign Up Now</a>
+                <a href="https://droombwpt.netlify.com/" class="cta">Sign Up Now</a>
             </div>
     </div>
 
