--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <ul class="show-desktop-nav hide-mobile" id="nav">
                         <li id="exit" class="exit-btn hide-desktop"><img src="img/exit.svg" alt="exit menu"></li>
-                        <li><a class="member" href="https://droombwpt.netlify.com/login">Member Login</a></li>
+                        <li><a class="member" href="https://droombwpt.netlify.com/">Member Login</a></li>
                         <li><a class="signal" href="contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
