--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                             <h2>Swipe Your Way To <br>Your Next Career</h2>
                             <p>On DROOM, you're able to look through jobs just like Tinder! Swipe right if you LOVE the job, swipe left if you don't. It's that simple!</p>
                     </div>
-                        <img src="img/iphone.png" alt="iOS Plant Profile">
+                        <img src="img/iphone2.png" alt="iOS Plant Profile">
                 </li>
                 <li class="android">
                     <div>
                             <h2>Top Rated Employers<br>a Fingertip Away</h2>
                             <p>DROOM has job opportunities from top tier companies. To connect with the new generation of workforce, they know they are going to be on DROOM. Join today and find young, hungry talent looking to make an impact immediately.</p>
                     </div>
-                            <img src="img/Android.png" alt="Android Plant Profile">
+                            <img src="img/Android2.png" alt="Android Plant Profile">
                     </li>
             </ul>
         </div>
